tedious javascript to fix checkbox values

--- a/app/views/hearings/pages/casedetailsdivorce.html
+++ b/app/views/hearings/pages/casedetailsdivorce.html
@@ -128,7 +128,7 @@ Case details
                                 <thead class="govuk-table__head">
                                 <tbody class="govuk-table__body">
                                     <tr class="govuk-table__row">
-                                        <td scope="row" class="govuk-table__cell" style="width:200px;">5 Otober 2021</td>
+                                        <td scope="row" class="govuk-table__cell" style="width:200px;">5 October 2021</td>
                                         <td class="govuk-table__cell"><a href="checkyouranswers?drafthearing=falce&changesallowed=true&">View and change</a></td>
                                         <td class="govuk-table__cell"><a href="#">Cancel</a></td>
                                     </tr>
@@ -166,7 +166,7 @@ Case details
                                     </tr>
                                     <tr class="govuk-table__row">
                                         <td scope="row" class="govuk-table__cell">13 December 2021</td>
-                                        <td class="govuk-table__cell"><a href="checkyouranswers?drafthearing=falce&changesallowed=false&"">View details</a></td>
+                                        <td class="govuk-table__cell"><a href="checkyouranswers?drafthearing=falce&changesallowed=false&">View details</a></td>
                                     </tr>
                                 </tbody>
                             </table>
