--- a/app/views/hearings/pages/region.html
+++ b/app/views/hearings/pages/region.html
@@ -34,49 +34,49 @@ Case details
                                     </legend>
                                     <div class="govuk-radios">
                                         <div class="govuk-radios__item">
-                                            <input class="govuk-radios__input" id="region1" name="region" type="radio" value="London">
+                                            <input class="govuk-radios__input" id="region1" name="regionselection" type="radio" value="London">
                                             <label class="govuk-label govuk-radios__label" for="region1">
                                                 London
                                             </label>
                                         </div>
                                         <div class="govuk-radios__item">
-                                            <input class="govuk-radios__input" id="region2" name="region" type="radio" value="Midlands">
+                                            <input class="govuk-radios__input" id="region2" name="regionselection" type="radio" value="Midlands">
                                             <label class="govuk-label govuk-radios__label" for="region2">
                                                 Midlands
                                             </label>
                                         </div>
                                         <div class="govuk-radios__item">
-                                            <input class="govuk-radios__input" id="region3" name="region" type="radio" value="North East">
+                                            <input class="govuk-radios__input" id="region3" name="regionselection" type="radio" value="North East">
                                             <label class="govuk-label govuk-radios__label" for="region3">
                                                 North East
                                             </label>
                                         </div>
                                         <div class="govuk-radios__item">
-                                            <input class="govuk-radios__input" id="region4" name="region" type="radio" value="North West">
+                                            <input class="govuk-radios__input" id="region4" name="regionselection" type="radio" value="North West">
                                             <label class="govuk-label govuk-radios__label" for="region4">
                                                 North West
                                             </label>
                                         </div>
                                         <div class="govuk-radios__item">
-                                            <input class="govuk-radios__input" id="region5" name="region" type="radio" value="Scotland">
+                                            <input class="govuk-radios__input" id="region5" name="regionselection" type="radio" value="Scotland">
                                             <label class="govuk-label govuk-radios__label" for="region5">
                                                 Scotland
                                             </label>
                                         </div>
                                         <div class="govuk-radios__item">
-                                            <input class="govuk-radios__input" id="region6" name="region" type="radio" value="South East">
+                                            <input class="govuk-radios__input" id="region6" name="regionselection" type="radio" value="South East">
                                             <label class="govuk-label govuk-radios__label" for="region6">
                                                 South East
                                             </label>
                                         </div>
                                         <div class="govuk-radios__item">
-                                            <input class="govuk-radios__input" id="region7" name="region" type="radio" value="South West">
+                                            <input class="govuk-radios__input" id="region7" name="regionselection" type="radio" value="South West">
                                             <label class="govuk-label govuk-radios__label" for="region7">
                                                 South West
                                             </label>
                                         </div>
                                         <div class="govuk-radios__item">
-                                            <input class="govuk-radios__input" id="region8" name="region" type="radio" value="Wales">
+                                            <input class="govuk-radios__input" id="region8" name="regionselection" type="radio" value="Wales">
                                             <label class="govuk-label govuk-radios__label" for="region8">
                                                 Wales
                                             </label>
