--- a/app/views/hearings/pages/venue.html
+++ b/app/views/hearings/pages/venue.html
@@ -39,7 +39,7 @@ Case details
                                     <div class="govuk-checkboxes" data-module="govuk-checkboxes">
 
 
-                                        {% if data.region == 'London' %}
+                                        {% if data.regionselection == 'London' %}
                                             <div class="govuk-checkboxes__item">
                                                 <input class="govuk-checkboxes__input" id="venues1" name="venues" type="checkbox" value="BEXLEYHEATH SOCIAL SECURITY AND CHILD SUPPORT TRIBUNAL">
                                                 <label class="govuk-label govuk-checkboxes__label" for="venues1">
@@ -83,7 +83,7 @@ Case details
                                                 </label>
                                             </div>
 
-                                        {% elif data.region == 'Midlands' %}
+                                        {% elif data.regionselection == 'Midlands' %}
                                             <div class="govuk-checkboxes__item">
                                                 <input class="govuk-checkboxes__input" id="venues1" name="venues" type="checkbox" value="BIRMINGHAM CIVIL AND FAMILY JUSTICE CENTRE">
                                                 <label class="govuk-label govuk-checkboxes__label" for="venues1">
@@ -133,7 +133,7 @@ Case details
                                                 </label>
                                             </div>
 
-                                        {% elif data.region == 'North East' %}
+                                        {% elif data.regionselection == 'North East' %}
                                             <div class="govuk-checkboxes__item">
                                                 <input class="govuk-checkboxes__input" id="venues1" name="venues" type="checkbox" value="BARNSLEY LAW COURTS">
                                                 <label class="govuk-label govuk-checkboxes__label" for="venues1">
@@ -219,26 +219,26 @@ Case details
                                                 </label>
                                             </div>
                                             <div class="govuk-checkboxes__item">
-                                                <input class="govuk-checkboxes__input" id="venues16" name="venues" type="checkbox" value="TEESSIDE MAGISTRATES COURT">
-                                                <label class="govuk-label govuk-checkboxes__label" for="venues16">
+                                                <input class="govuk-checkboxes__input" id="venues15" name="venues" type="checkbox" value="TEESSIDE MAGISTRATES COURT">
+                                                <label class="govuk-label govuk-checkboxes__label" for="venues15">
                                                     TEESSIDE MAGISTRATES COURT
                                                 </label>
                                             </div>
                                             <div class="govuk-checkboxes__item">
-                                                <input class="govuk-checkboxes__input" id="venues17" name="venues" type="checkbox" value="WAKEFIELD CIVIL AND FAMILY JUSTICE CENTRE">
-                                                <label class="govuk-label govuk-checkboxes__label" for="venues17">
+                                                <input class="govuk-checkboxes__input" id="venues16" name="venues" type="checkbox" value="WAKEFIELD CIVIL AND FAMILY JUSTICE CENTRE">
+                                                <label class="govuk-label govuk-checkboxes__label" for="venues16">
                                                     WAKEFIELD CIVIL AND FAMILY JUSTICE CENTRE
                                                 </label>
                                             </div>
                                             <div class="govuk-checkboxes__item">
-                                                <input class="govuk-checkboxes__input" id="venues18" name="venues" type="checkbox" value="YORK COUNTY COURT AND FAMILY COURT">
-                                                <label class="govuk-label govuk-checkboxes__label" for="venues18">
+                                                <input class="govuk-checkboxes__input" id="venues17" name="venues" type="checkbox" value="YORK COUNTY COURT AND FAMILY COURT">
+                                                <label class="govuk-label govuk-checkboxes__label" for="venues17">
                                                     YORK COUNTY COURT AND FAMILY COURT
                                                 </label>
                                             </div>
 
 
-                                        {% elif data.region == 'North West' %}
+                                        {% elif data.regionselection == 'North West' %}
                                             <div class="govuk-checkboxes__item">
                                                 <input class="govuk-checkboxes__input" id="venues1" name="venues" type="checkbox" value="BARROW-IN-FURNESS COUNTY COURT AND FAMILY COURT">
                                                 <label class="govuk-label govuk-checkboxes__label" for="venues1">
@@ -324,31 +324,31 @@ Case details
                                                 </label>
                                             </div>
                                             <div class="govuk-checkboxes__item">
-                                                <input class="govuk-checkboxes__input" id="venues16" name="venues" type="checkbox" value="ROCHDALE SOCIAL SECURITY AND CHILD SUPPORT TRIBUNAL">
-                                                <label class="govuk-label govuk-checkboxes__label" for="venues16">
+                                                <input class="govuk-checkboxes__input" id="venues15" name="venues" type="checkbox" value="ROCHDALE SOCIAL SECURITY AND CHILD SUPPORT TRIBUNAL">
+                                                <label class="govuk-label govuk-checkboxes__label" for="venues15">
                                                     ROCHDALE SOCIAL SECURITY AND CHILD SUPPORT TRIBUNAL
                                                 </label>
                                             </div>
                                             <div class="govuk-checkboxes__item">
-                                                <input class="govuk-checkboxes__input" id="venues17" name="venues" type="checkbox" value="ST HELENS COUNTY COURT AND FAMILY">
-                                                <label class="govuk-label govuk-checkboxes__label" for="venues17">
+                                                <input class="govuk-checkboxes__input" id="venues16" name="venues" type="checkbox" value="ST HELENS COUNTY COURT AND FAMILY">
+                                                <label class="govuk-label govuk-checkboxes__label" for="venues16">
                                                     ST HELENS COUNTY COURT AND FAMILY
                                                 </label>
                                             </div>
                                             <div class="govuk-checkboxes__item">
-                                                <input class="govuk-checkboxes__input" id="venues18" name="venues" type="checkbox" value="STOCKPORT MAGISTRATES COURT AND FAMILY COURT">
-                                                <label class="govuk-label govuk-checkboxes__label" for="venues18">
+                                                <input class="govuk-checkboxes__input" id="venues17" name="venues" type="checkbox" value="STOCKPORT MAGISTRATES COURT AND FAMILY COURT">
+                                                <label class="govuk-label govuk-checkboxes__label" for="venues17">
                                                     STOCKPORT MAGISTRATES COURT AND FAMILY COURT
                                                 </label>
                                             </div>
                                             <div class="govuk-checkboxes__item">
-                                                <input class="govuk-checkboxes__input" id="venues19" name="venues" type="checkbox" value="WIGAN AND LEIGH MAGISTRATES COURT">
-                                                <label class="govuk-label govuk-checkboxes__label" for="venues19">
+                                                <input class="govuk-checkboxes__input" id="venues18" name="venues" type="checkbox" value="WIGAN AND LEIGH MAGISTRATES COURT">
+                                                <label class="govuk-label govuk-checkboxes__label" for="venues18">
                                                     WIGAN AND LEIGH MAGISTRATES COURT
                                                 </label>
                                             </div>
 
-                                        {% elif data.region == 'Scotland' %}
+                                        {% elif data.regionselection == 'Scotland' %}
                                             <div class="govuk-checkboxes__item">
                                                 <input class="govuk-checkboxes__input" id="venues1" name="venues" type="checkbox" value="ABERDEEN TRIBUNAL HEARING CENTRE">
                                                 <label class="govuk-label govuk-checkboxes__label" for="venues1">
@@ -380,7 +380,7 @@ Case details
                                                 </label>
                                             </div>
 
-                                        {% elif data.region == 'South East' %}
+                                        {% elif data.regionselection == 'South East' %}
                                             <div class="govuk-checkboxes__item">
                                                 <input class="govuk-checkboxes__input" id="venues1" name="venues" type="checkbox" value="ASHFORD TRIBUNAL HEARING CENTRE">
                                                 <label class="govuk-label govuk-checkboxes__label" for="venues1">
@@ -466,26 +466,26 @@ Case details
                                                 </label>
                                             </div>
                                             <div class="govuk-checkboxes__item">
-                                                <input class="govuk-checkboxes__input" id="venues16" name="venues" type="checkbox" value="NORWICH SOCIAL SECURITY AND CHILD SUPPORT TRIBUNAL">
-                                                <label class="govuk-label govuk-checkboxes__label" for="venues16">
+                                                <input class="govuk-checkboxes__input" id="venues15" name="venues" type="checkbox" value="NORWICH SOCIAL SECURITY AND CHILD SUPPORT TRIBUNAL">
+                                                <label class="govuk-label govuk-checkboxes__label" for="venues15">
                                                     NORWICH SOCIAL SECURITY AND CHILD SUPPORT TRIBUNAL
                                                 </label>
                                             </div>
                                             <div class="govuk-checkboxes__item">
-                                                <input class="govuk-checkboxes__input" id="venues17" name="venues" type="checkbox" value="OXFORD COMBINED COURT CENTRE">
-                                                <label class="govuk-label govuk-checkboxes__label" for="venues17">
+                                                <input class="govuk-checkboxes__input" id="venues16" name="venues" type="checkbox" value="OXFORD COMBINED COURT CENTRE">
+                                                <label class="govuk-label govuk-checkboxes__label" for="venues16">
                                                     OXFORD COMBINED COURT CENTRE
                                                 </label>
                                             </div>
                                             <div class="govuk-checkboxes__item">
-                                                <input class="govuk-checkboxes__input" id="venues18" name="venues" type="checkbox" value="PETERBOROUGH MAGISTRATES COURT">
+                                                <input class="govuk-checkboxes__input" id="venues17" name="venues" type="checkbox" value="PETERBOROUGH MAGISTRATES COURT">
                                                 <label class="govuk-label govuk-checkboxes__label" for="venues18">
                                                     PETERBOROUGH MAGISTRATES COURT
                                                 </label>
                                             </div>
                                             <div class="govuk-checkboxes__item">
-                                                <input class="govuk-checkboxes__input" id="venues19" name="venues" type="checkbox" value="READING TRIBUNAL HEARING CENTRE">
-                                                <label class="govuk-label govuk-checkboxes__label" for="venues19">
+                                                <input class="govuk-checkboxes__input" id="venues18" name="venues" type="checkbox" value="READING TRIBUNAL HEARING CENTRE">
+                                                <label class="govuk-label govuk-checkboxes__label" for="venues18">
                                                     READING TRIBUNAL HEARING CENTRE
                                                 </label>
                                             </div>
@@ -496,20 +496,20 @@ Case details
                                                 </label>
                                             </div>
                                             <div class="govuk-checkboxes__item">
-                                                <input class="govuk-checkboxes__input" id="venues19" name="venues" type="checkbox" value="STEVENAGE MAGISTRATES COURT">
-                                                <label class="govuk-label govuk-checkboxes__label" for="venues19">
+                                                <input class="govuk-checkboxes__input" id="venues20" name="venues" type="checkbox" value="STEVENAGE MAGISTRATES COURT">
+                                                <label class="govuk-label govuk-checkboxes__label" for="venues20">
                                                     STEVENAGE MAGISTRATES COURT
                                                 </label>
                                             </div>
                                             <div class="govuk-checkboxes__item">
-                                                <input class="govuk-checkboxes__input" id="venues19" name="venues" type="checkbox" value="WATFORD TRIBUNAL HEARING CENTRE">
-                                                <label class="govuk-label govuk-checkboxes__label" for="venues19">
+                                                <input class="govuk-checkboxes__input" id="venues21" name="venues" type="checkbox" value="WATFORD TRIBUNAL HEARING CENTRE">
+                                                <label class="govuk-label govuk-checkboxes__label" for="venues21">
                                                     WATFORD TRIBUNAL HEARING CENTRE
                                                 </label>
                                             </div>
 
 
-                                        {% elif data.region == 'South West' %}
+                                        {% elif data.regionselection == 'South West' %}
                                             <div class="govuk-checkboxes__item">
                                                 <input class="govuk-checkboxes__input" id="venues1" name="venues" type="checkbox" value="ALDERSHOT JUSTICE CENTRE">
                                                 <label class="govuk-label govuk-checkboxes__label" for="venues1">
@@ -596,7 +596,7 @@ Case details
                                             </div>
 
 
-                                        {% elif data.region == 'Wales' %}
+                                        {% elif data.regionselection == 'Wales' %}
                                             <div class="govuk-checkboxes__item">
                                                 <input class="govuk-checkboxes__input" id="venues1" name="venues" type="checkbox" value="ABERYSTWYTH JUSTICE CENTRE">
                                                 <label class="govuk-label govuk-checkboxes__label" for="venues1">
@@ -638,6 +638,7 @@ Case details
                                         {% endif %}
 
 
+                                        <!--  <p  style="display: block" onclick="buildstring();"><br>test</p>  -->
 
 
 
@@ -649,12 +650,12 @@ Case details
 
 
 
+                            <textarea  id="placeholder" name="placeholder" value="sdfd" style="display: none;"> </textarea>
 
 
 
-
-                            <div class="govuk-form-group  govuk-!-margin-top-5" >
-                                <button class="govuk-button" data-module="govuk-button">
+                            <div class="govuk-form-group  govuk-!-margin-top-5">
+                                <button class="govuk-button" data-module="govuk-button"  onmouseover="buildstring();">
                                     Continue
                                 </button>
                             </div>
@@ -671,6 +672,36 @@ Case details
 
 
 <script>
+
+
+    function buildstring()
+    {
+        var x = document.querySelectorAll('input[type="checkbox"]').length;
+
+        //alert(x);
+
+        var sList = "";
+        for(i=1; i<=x; i++)
+        {
+           //alert("loops run " + i);
+            if(document.getElementById("venues"+i).checked)
+            {
+                sList = sList + document.getElementById("venues"+i).value;
+                if(i < x)
+                {
+                    sList = sList + "\n";
+                }
+            }
+
+        }
+        sList = sList.substring(0, sList.length - 1);
+
+        document.getElementById("placeholder").value = sList;
+    }
+
+
+
+
     function goBack() {
         window.history.back();
     }
