--- a/app/views/hearings/pages/venuedefault.html
+++ b/app/views/hearings/pages/venuedefault.html
@@ -12,7 +12,7 @@ Case details
         <div class="govuk-grid-row"  style="max-width:1860px; margin: 0 auto;">
             <div class="govuk-tabs__panel" id="event" style=" padding: 0px; border-bottom: 0px; border-right: 0px; border-left: 0px; min-height: 300px;">
 
-                <<a href="#" class="govuk-back-link govuk-!-margin-bottom-6" onclick="goBack();">Back</a>
+                <a href="#" class="govuk-back-link govuk-!-margin-bottom-6" onclick="goBack();">Back</a>
 
                         <!-- <h2 class="govuk-heading-l">Channel</h2>-->
 
@@ -31,8 +31,7 @@ Case details
                                     </h1>
                                 </legend>
 
-                                <p>ROMFORD COUNTY COURT AND FAMILY COURT<br>
-                                    <a href="/hearings/pages/region">Change venue</a></p>
+                                <p style="white-space: pre-wrap;">{{ data['thenevue'] }}<br><a href="/hearings/pages/region">Change venue</a></p>
                             </div>
 
 
