fix to check your answers logic

--- a/app/views/hearings/pages/checkyouranswers.html
+++ b/app/views/hearings/pages/checkyouranswers.html
@@ -170,7 +170,7 @@ Case details
 
 
 
-                                            {% if data.panelsame == 'No - select a new panel' %}
+                                            {% if data.panelsame == 'No - select a new panel'  or  data.firsthearingscenario =='true' %}
 
                                                 <div class="govuk-summary-list__row">
                                                     <dt class="govuk-summary-list__key">
