fixes to testing

--- a/app/views/hearings/index.html
+++ b/app/views/hearings/index.html
@@ -17,17 +17,18 @@
 
         <p>Links open in a new tab.</p>
 
-        <p><a target="_blank" href="/hearings/first">First hearing</a></p>
+        <p><a target="_blank" href="/hearings/first">Scenario 1</a></p>       <!-- First hearing</a></p> -->
 
-        <p><a target="_blank" href="/hearings/firstalt">First hearing alternative</a></p>
+        <p><a target="_blank" href="/hearings/firstalt">Scenario 2</a></p>       <!--First hearing alternative</a></p>-->
 
 
-        <p><a target="_blank" href="/hearings/after10mins">After 10 mins</a></p>
+        <p><a target="_blank" href="/hearings/after10mins">Scenario 3</a></p>       <!--After 10 mins</a></p>-->
 
-        <p><a target="_blank" href="/hearings/aftermonth">After a month</a></p>
+        <p><a target="_blank" href="/hearings/aftermonth">Scenario 4</a></p>       <!--After a month</a></p>-->
 
-        <p><a target="_blank" href="/hearings/all">All states</a></p>
+        <p><a target="_blank" href="/hearings/all">Scenario 5</a></p>       <!--All states</a></p>-->
 
+        <br>
         <br>
         <br>
 
