--- a/app/views/hearings/pages/timing.html
+++ b/app/views/hearings/pages/timing.html
@@ -248,24 +248,24 @@ Case details
                                                     <div class="govuk-date-input" id="passport-issued">
                                                         <div class="govuk-date-input__item">
                                                             <div class="govuk-form-group">
-                                                                <label class="govuk-label govuk-date-input__label" for="passport-issued-day">
+                                                                <label class="govuk-label govuk-date-input__label" for="firstdateday">
                                                                     Day
                                                                 </label>
-                                                                <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="passport-issued-day" name="passport-issued-day" type="text" pattern="[0-9]*" inputmode="numeric"></div>
+                                                                <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="firstdateday" name="firstdateday" type="text" pattern="[0-9]*" inputmode="numeric" value="{{ data.firstdateday }}"></div>
                                                         </div>
                                                         <div class="govuk-date-input__item">
                                                             <div class="govuk-form-group">
-                                                                <label class="govuk-label govuk-date-input__label" for="passport-issued-month">
+                                                                <label class="govuk-label govuk-date-input__label" for="firstdatemonth">
                                                                     Month
                                                                 </label>
-                                                                <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="passport-issued-month" name="passport-issued-month" type="text" pattern="[0-9]*" inputmode="numeric"></div>
+                                                                <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="firstdatemonth" name="firstdatemonth" type="text" pattern="[0-9]*" inputmode="numeric" value="{{ data.firstdatemonth }}"></div>
                                                         </div>
                                                         <div class="govuk-date-input__item">
                                                             <div class="govuk-form-group">
-                                                                <label class="govuk-label govuk-date-input__label" for="passport-issued-year">
+                                                                <label class="govuk-label govuk-date-input__label" for="firstdateyear">
                                                                     Year
                                                                 </label>
-                                                                <input class="govuk-input govuk-date-input__input govuk-input--width-4" id="passport-issued-year" name="passport-issued-year" type="text" pattern="[0-9]*" inputmode="numeric"></div>
+                                                                <input class="govuk-input govuk-date-input__input govuk-input--width-4" id="firstdateyear" name="firstdateyear" type="text" pattern="[0-9]*" inputmode="numeric" value="{{ data.firstdateyear }}"></div>
                                                         </div>
                                                     </div>
 
@@ -300,24 +300,24 @@ Case details
                                                     <div class="govuk-date-input" id="passport-issued">
                                                         <div class="govuk-date-input__item">
                                                             <div class="govuk-form-group">
-                                                                <label class="govuk-label govuk-date-input__label" for="passport-issued-day">
+                                                                <label class="govuk-label govuk-date-input__label" for="earliestdateday">
                                                                     Day
                                                                 </label>
-                                                                <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="passport-issued-day" name="passport-issued-day" type="text" pattern="[0-9]*" inputmode="numeric"></div>
+                                                                <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="earliestdateday" name="earliestdateday" type="text" pattern="[0-9]*" inputmode="numeric" value="{{ data.earliestdateday }}"></div>
                                                         </div>
                                                         <div class="govuk-date-input__item">
                                                             <div class="govuk-form-group">
-                                                                <label class="govuk-label govuk-date-input__label" for="passport-issued-month">
+                                                                <label class="govuk-label govuk-date-input__label" for="earliestdatemonth">
                                                                     Month
                                                                 </label>
-                                                                <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="passport-issued-month" name="passport-issued-month" type="text" pattern="[0-9]*" inputmode="numeric"></div>
+                                                                <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="earliestdatemonth" name="earliestdatemonth" type="text" pattern="[0-9]*" inputmode="numeric" value="{{ data.earliestdatemonth }}"></div>
                                                         </div>
                                                         <div class="govuk-date-input__item">
                                                             <div class="govuk-form-group">
-                                                                <label class="govuk-label govuk-date-input__label" for="passport-issued-year">
+                                                                <label class="govuk-label govuk-date-input__label" for="earliestdateyear">
                                                                     Year
                                                                 </label>
-                                                                <input class="govuk-input govuk-date-input__input govuk-input--width-4" id="passport-issued-year" name="passport-issued-year" type="text" pattern="[0-9]*" inputmode="numeric"></div>
+                                                                <input class="govuk-input govuk-date-input__input govuk-input--width-4" id="earliestdateyear" name="earliestdateyear" type="text" pattern="[0-9]*" inputmode="numeric" value="{{ data.earliestdateyear }}"></div>
                                                         </div>
                                                     </div>
 
@@ -336,24 +336,24 @@ Case details
                                                     <div class="govuk-date-input" id="passport-issued">
                                                         <div class="govuk-date-input__item">
                                                             <div class="govuk-form-group">
-                                                                <label class="govuk-label govuk-date-input__label" for="passport-issued-day">
+                                                                <label class="govuk-label govuk-date-input__label" for="latestdateday">
                                                                     Day
                                                                 </label>
-                                                                <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="passport-issued-day" name="passport-issued-day" type="text" pattern="[0-9]*" inputmode="numeric"></div>
+                                                                <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="latestdateday" name="latestdateday" type="text" pattern="[0-9]*" inputmode="numeric" value="{{ data.latestdateday }}"></div>
                                                         </div>
                                                         <div class="govuk-date-input__item">
                                                             <div class="govuk-form-group">
-                                                                <label class="govuk-label govuk-date-input__label" for="passport-issued-month">
+                                                                <label class="govuk-label govuk-date-input__label" for="latestdatemonth">
                                                                     Month
                                                                 </label>
-                                                                <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="passport-issued-month" name="passport-issued-month" type="text" pattern="[0-9]*" inputmode="numeric"></div>
+                                                                <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="latestdatemonth" name="latestdatemonth" type="text" pattern="[0-9]*" inputmode="numeric" value="{{ data.latestdatemonth }}"></div>
                                                         </div>
                                                         <div class="govuk-date-input__item">
                                                             <div class="govuk-form-group">
-                                                                <label class="govuk-label govuk-date-input__label" for="passport-issued-year">
+                                                                <label class="govuk-label govuk-date-input__label" for="latestdateyear">
                                                                     Year
                                                                 </label>
-                                                                <input class="govuk-input govuk-date-input__input govuk-input--width-4" id="passport-issued-year" name="passport-issued-year" type="text" pattern="[0-9]*" inputmode="numeric"></div>
+                                                                <input class="govuk-input govuk-date-input__input govuk-input--width-4" id="latestdateyear" name="latestdateyear" type="text" pattern="[0-9]*" inputmode="numeric" value="{{ data.latestdateyear }}"></div>
                                                         </div>
                                                     </div>
 
